[FIX] Overlapping on multi line fields (Issue No:#230)

--- a/addons/web/static/src/less/list_view.less
+++ b/addons/web/static/src/less/list_view.less
@@ -185,7 +185,7 @@
         }
         .o_input {
             padding: @table-condensed-cell-padding;
-            background-color: white;
+            background-color: white !important;
 
             .o_input {
                 padding: 0!important;
